--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,5 +8,7 @@
   lastname: Monchalin
   email: 
   website: 
-  bio: Artist and Engineer. Passionate about interactive & digital art. (Real time Motion graphics / live performance / Generative system)
+  bio: Artist and Engineer. 
+  Passionate about interactive & digital art. 
+  (Real time Motion graphics / live performance / Generative system)
 
